Start to clean up TexAutoIndentStrategy. Add support for tabs instead of spaces for indentation.